--- a/pages/1380.html
+++ b/pages/1380.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8732/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -364,7 +363,7 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Theta-space'>Theta-space</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/omega-category'>ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category'>(∞,n)-category</a>
 <ul>
@@ -410,9 +409,9 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/0-category'>0-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/%28-1%29-category'>(−1)-category</a></li>
+<li><span class='newWikiWord'>(?1)-category<a href='/nlab/new/%28%3F1%29-category'>?</a></span></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/%28-2%29-category'>(−2)-category</a></li>
+<li><span class='newWikiWord'>(?2)-category<a href='/nlab/new/%28%3F2%29-category'>?</a></span></li>
 </ul>
 </li>
 
@@ -440,7 +439,7 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/simplicial+model+for+weak+omega-categories'>simplicial model for weak ω-categories</a>
+<li><span class='newWikiWord'>simplicial model for weak ∞-categories<a href='/nlab/new/simplicial+model+for+weak+%E2%88%9E-categories'>?</a></span>
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/complicial+set'>complicial set</a></li>
 
@@ -460,11 +459,11 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/tetracategory'>tetracategory</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/strict+omega-category'>strict ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/strict+n-category'>strict ∞-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Batanin+omega-category'>Batanin ω-category</a></li>
+<li><span class='newWikiWord'>Batanin ∞-category<a href='/nlab/new/Batanin+%E2%88%9E-category'>?</a></span></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ∞-category</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Grothendieck-Maltsiniotis+infinity-category'>Grothendieck-Maltsiniotis ∞-categories</a></li>
 </ul>
@@ -573,20 +572,32 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>A <em>strict 2-functor</em> is a <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a> between <a class='existingWikiWord' href='/nlab/show/strict+2-category'>strict 2-categories</a> which strictly respects the <a class='existingWikiWord' href='/nlab/show/composition'>composition</a> operation of <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> and <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a>. This is in contrast to <em><a class='existingWikiWord' href='/nlab/show/pseudofunctor'>weak 2-functors</a></em> (also called <em><a class='existingWikiWord' href='/nlab/show/pseudofunctor'>pseudofunctors</a></em>) which may respect the composition of <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> only up to <a class='existingWikiWord' href='/nlab/show/natural+isomorphism'>natural isomorphism</a> (hence up to <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a> in the <a class='existingWikiWord' href='/nlab/show/Cat'>2-category of categories</a>).</p>
+
+<p>While the generally “correct” concepts in <a class='existingWikiWord' href='/nlab/show/2-category+theory'>2-category theory</a> are <em><a class='existingWikiWord' href='/nlab/show/2-category'>weak 2-categories</a></em> with <em><a class='existingWikiWord' href='/nlab/show/pseudofunctor'>weak 2-functors</a></em> between them, it is often useful to recognize strict 2-functors among weak 2-functors, or to replace, up to <a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>eqivalence of 2-categories</a> and <a class='existingWikiWord' href='/nlab/show/pseudonatural+transformation'>pseudonatural transformation</a> , weak 2-functors by strict ones.</p>
+
 <h2 id='definition'>Definition</h2>
 
-<p>Just as a <a class='existingWikiWord' href='/nlab/show/strict+2-category'>strict 2-category</a> is a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> over <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a>, a <strong>strict 2-functor</strong> is a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> enriched over <math class='maruku-mathml' display='inline' id='mathml_32700b34d7eef0cd47719561e813a3fa62b412fb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math> in a <math class='maruku-mathml' display='inline' id='mathml_32700b34d7eef0cd47719561e813a3fa62b412fb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/1-category'>categorial</a> sense.</p>
+<p>Let <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a> be the <em><a class='existingWikiWord' href='/nlab/show/1-category'>1-category</a></em> of <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, regarded as a <a class='existingWikiWord' href='/nlab/show/cosmos'>Bénabou cosmos</a> for <a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a> via its <a class='existingWikiWord' href='/nlab/show/cartesian+closed+category'>cartesian closed category</a>-<a class='existingWikiWord' href='/nlab/show/structure'>structure</a>.</p>
+
+<p>Notice that <a class='existingWikiWord' href='/nlab/show/strict+2-category'>strict 2-categories</a> may be identified with <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>. Under this identification, strict 2-functors are <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functors</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a>, <a class='existingWikiWord' href='/nlab/show/double+functor'>double functor</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/strict+2-groupoid'>strict 2-groupoid</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/n-functor'>n-functor</a></p>
 </li>
 </ul>
 
@@ -595,19 +606,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 28, 2012 16:08:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.169.65.155)
+  <p>
+  Last revised on July 13, 2018 at 03:56:41.
+  See the <a href="https://ncatlab.org/nlab/history/strict 2-functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/strict+2-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/strict+2-functor/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/strict+2-functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/strict+2-functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/strict+2-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/strict+2-functor/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/strict+2-functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/strict+2-functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/strict 2-functor/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/strict+2-functor" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/strict+2-functor" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/strict+2-functor" id="view_source" rel="nofollow">Source</a>
