--- a/pages/18472.html
+++ b/pages/18472.html
@@ -827,7 +827,7 @@ margin-left: 0em;
 <li><em>Gauge Field Theories: Spin One and Spin Two: 100 Years After General Relativity</em>, <a href='http://store.doverpublications.com/0486805247.html'>Dover</a>, 2016,</li>
 </ul>
 
-<p>with extra chapter 6: <em>Non-geometric general relativity</em>, based (it seems) on the article</p>
+<p>with extra chapter 6: <em>Non-geometric general relativity</em>, on <a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a> that is based (it seems) on the article</p>
 
 <ul>
 <li id='Scharf13'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em>Inhomogeneous cosmology in the cosmic rest frame without dark stuff</em> (<a href='https://arxiv.org/abs/1312.2695'>arXiv:1312.2695</a>)</li>
@@ -860,14 +860,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 13, 2018 at 16:56:35.
+  Last revised on July 13, 2018 at 17:43:09.
   See the <a href="https://ncatlab.org/nlab/history/Quantum Gauge Theories -- A True Ghost Story" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Quantum+Gauge+Theories+--+A+True+Ghost+Story/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Quantum+Gauge+Theories+--+A+True+Ghost+Story/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Quantum Gauge Theories -- A True Ghost Story/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
