--- a/pages/19193.html
+++ b/pages/19193.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussion/8445/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -769,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -913,7 +914,7 @@ margin-left: 0em;
 <p>From <a href='#VogelsbergerEtAl14'>Vogelsberger et al. 14</a>:</p>
 
 <blockquote>
-<p id='TheSimulationReproduces'> The simulation reproduces reasonably well the cosmic star formation rate density, the galaxy luminosity function, and baryon conversion efficiency at <math class='maruku-mathml' display='inline' id='mathml_e6714afc35167611af2fe99a3d33a3a77806b11f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>z=0</annotation></semantics></math>. It also qualitatively captures the impact of galaxy environment on the red fractions of galaxies. The internal velocity structure of selected well-resolved disk galaxies obeys the stellar and baryonic Tully-Fisher relation together with flat circular velocity curves. In the well-resolved regime the simulation reproduces the observed mix of early-type and late-type galaxies.</p>
+<p id='TheSimulationReproduces'> The simulation reproduces reasonably well the cosmic star formation rate density, the galaxy luminosity function, and baryon conversion efficiency at <math class='maruku-mathml' display='inline' id='mathml_b95b374403e9b31edf43fe316b039222c2d6240f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>z=0</annotation></semantics></math>. It also qualitatively captures the impact of galaxy environment on the red fractions of galaxies. The internal velocity structure of selected well-resolved disk galaxies obeys the stellar and baryonic Tully-Fisher relation together with flat circular velocity curves. In the well-resolved regime the simulation reproduces the observed mix of early-type and late-type galaxies.</p>
 </blockquote>
 
 <p>See also <a href='#IllustrisProjectWebsite'>Illustris Project Website</a>: <em><a href='http://www.illustris-project.org/about/#public-three'>What are we learning?</a></em> and <em><a href='http://www.illustris-project.org/about/#astronomers-four'>Preliminary Results</a></em>.</p>
@@ -921,6 +922,10 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a></p>
 </li>
@@ -1011,15 +1016,15 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 16, 2018 at 08:57:33.
+  Last revised on July 13, 2018 at 17:39:54.
   See the <a href="https://ncatlab.org/nlab/history/structure formation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/structure+formation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structure+formation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/structure+formation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structure+formation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/structure+formation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structure+formation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/structure+formation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structure+formation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/structure formation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/structure+formation" accesskey="p" id="view_print" rel="nofollow">Print</a>
