--- a/pages/19523.html
+++ b/pages/19523.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1098,9 +1098,9 @@ margin-left: 0em;
 
 <p>The <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> assumes that this is the case, and studies <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a> as a perturbation about a homogeneous <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>.</p>
 
-<p>Given that the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> faces some issues related to <em><a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>/<a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a></em> (and possibly related issues such as <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> or <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>), it has been suggested that these may be but an artifact of the overly idealistic approximation of cosmic homogeneity, and that a more accurate inhomogeneous cosmology would not need to assume any <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> (e.g. <a href='#Buchert07'>Buchert 07</a>, <a href='#Buchert11'>Buchert 11</a>, <a href='#BucherRasanen11'>Buchert-Rasanen 11</a>, <a href='#Scharf13'>Scharf 13</a>).</p>
+<p>Given that the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> faces some issues related to <em><a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>/<a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a></em> (and possibly related issues such as <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> or <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>), it has been suggested that these may be but an artifact of the overly idealistic approximation of cosmic homogeneity, and that a more accurate inhomogeneous cosmology would not need to assume any <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> (e.g. <a href='#Celerier00'>Célérier 99</a>, <a href='#AlnesAmarzguiouiGron06'>Alnes-Amarzguioui-Gron 06</a>, <a href='#AlnesAmarzguioui06'>Alnes-Amarzguioui 06</a>, <a href='#BuchertLarenaAlimi06'>Buchert-Larena-Alimi 06</a>, <a href='#EnqvistMattsson06'>Enqvist-Mattsson 06</a> <a href='#Buchert07'>Buchert 07</a>, <a href='#Sarkar08'>Sarkar 08</a>, <a href='#Buchert11'>Buchert 11</a>, <a href='#BucherRasanen11'>Buchert-Rasanen 11</a>, <a href='#Scharf13'>Scharf 13</a>, <a href='#Moffat16'>Moffat 16</a>).</p>
 
-<p>A seminal argument that it <em>is</em> consistent to neglect cosmic inhomogeneity due to (<a href='#GreenWald10'>Green-Wald 10</a>, <a href='#GreenWald13'>Green-Wald 13</a>), has been called into question in <a href='#BuchertEtAl15'>Buchert et al. 15</a>, where it is concluded that the question is more subtle and remains open. Recent review is in <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16</a>.</p>
+<p>A seminal argument that it <em>is</em> consistent to neglect cosmic inhomogeneity due to <a href='#GreenWald10'>Green-Wald 10</a>, <a href='#GreenWald13'>Green-Wald 13</a>, has been called into question in <a href='#BuchertEtAl15'>Buchert et al. 15</a>, where it is concluded that the question is more subtle and remains open. Recent review is in <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16</a>.</p>
 
 <p>If the apparent small positive <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> were but an artifact of neglecting backreaction of inhomegeneities, some theoretical puzzlements regarding <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> on <a class='existingWikiWord' href='/nlab/show/de+Sitter+spacetime'>de Sitter spacetimes</a> would disappear (see <a href='de+Sitter+spacetime#Rajaraman16'>Rajaraman 16</a> for general discussion and <a href='#DanielssonVanRiet18'>Danielsson-VanRiet 18, p. 27</a> for discussion of <a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacua</a>).</p>
 
@@ -1113,12 +1113,44 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
+<li id='Celerier00'>
+<p>Marie-Noëlle Célérier, <em>Do we really see a cosmological constant in the supernovae data?</em>, Astron.Astrophys.353:63-71,2000</p>
+</li>
+
+<li id='AlnesAmarzguiouiGron06'>
+<p>H. Alnes, M. Amarzguioui and O. Gron, <em>An inhomogeneous alternative to dark energy?</em>, Phys. Rev. D 73, 083519 (2006) (<a href='https://arxiv.org/abs/astro-ph/0512006'>arXiv:astro-ph/0512006</a>)</p>
+</li>
+
+<li id='BuchertLarenaAlimi06'>
+<p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, Julien Larena, Jean-Michel Alimi, <em>Correspondence between kinematical backreaction and scalar field cosmologies - the ‘morphon field’</em>, Class. Quant. Grav.23:6379-6408, 2006 (<a href='https://arxiv.org/abs/gr-qc/0606020'>arXiv:gr-qc/0606020</a>)</p>
+</li>
+
+<li id='EnqvistMattsson06'>
+<p>Kari Enqvist, Teppo Mattsson, <em>The effect of inhomogeneous expansion on the supernova observations</em>, JCAP 0702:019,2007 (<a href='https://arxiv.org/abs/astro-ph/0609120'>arXiv:astro-ph/0609120</a>)</p>
+</li>
+
+<li id='AlnesAmarzguioui06'>
+<p>Havard Alnes, Morad Amarzguioui, <em>The supernova Hubble diagram for off-center observers in a spherically symmetric inhomogeneous universe</em>, Phys. Rev. D75:023506, 2007 (<a href='https://arxiv.org/abs/astro-ph/0610331'>arXiv:astro-ph/0610331</a>)</p>
+</li>
+
 <li id='Buchert07'>
 <p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, <em>Dark Energy from structure: a status report</em>, Gen.Rel.Grav.40:467-527, 2008 (<a href='http://xxx.lanl.gov/abs/0707.2153'>arXiv:0707.2153</a>)</p>
 </li>
 
+<li id='Sarkar08'>
+<p>Subir Sarkar, <em>Is the evidence for dark energy secure?</em>, Gen. Rel. Grav.40:269-284, 2008 (<a href='https://arxiv.org/abs/0710.5307'>arXiv:0710.5307</a>)</p>
+</li>
+
+<li>
+<p>Alessio Notari, <em>Can an Inhomogeneous Universe mimic Dark Energy?</em>, 2009 (<a class='existingWikiWord' href='/nlab/files/NotariInhomogeneousCosmology.pdf' title='pdf'>pdf</a>)</p>
+</li>
+
 <li id='GreenWald10'>
 <p>Stephen R. Green, <a class='existingWikiWord' href='/nlab/show/Robert+Wald'>Robert Wald</a>, <em>A new framework for analyzing the effects of small scale inhomogeneities in cosmology</em>, Phys.Rev.D83:084020, 2011 (<a href='https://arxiv.org/abs/1011.4920'>arXiv:1011.4920</a>)</p>
+</li>
+
+<li>
+<p>Michael Blomqvist, <em>Inhomogeneous cosmologies with clustered dark energy or a local matter void</em>, 2010 (<a href='http://www.diva-portal.org/smash/record.jsf?pid=diva2%3A353689&amp;dswid=2010'>web</a>)</p>
 </li>
 
 <li id='Buchert11'>
@@ -1143,6 +1175,10 @@ margin-left: 0em;
 <p>exposition in <em><a href='https://cqgplus.com/2016/01/20/the-universe-is-inhomogeneous-does-it-matter/'>The Universe is inhomogeneous. Does it matter?</a></em> CQG+, 2016</p>
 </li>
 
+<li id='Moffat16'>
+<p><a class='existingWikiWord' href='/nlab/show/John+Moffat'>John Moffat</a>, <em>Inhomogeneous Cosmology Redux</em> (<a href='https://arxiv.org/abs/1608.00534'>arXiv:1608.00534</a>)</p>
+</li>
+
 <li id='BelejkoKorzynski16'>
 <p>Krzysztof Bolejko, Mikołaj Korzyński, <em>Inhomogeneous cosmology and backreaction: Current status and future prospects</em>, Int. J. Mod. Phys. D 26, 1730011 (2017) (<a href='https://arxiv.org/abs/1612.08222'>arXiv:1612.08222</a>)</p>
 </li>
@@ -1161,14 +1197,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on July 13, 2018 at 18:25:23.
+  Last revised on July 13, 2018 at 19:56:27.
   See the <a href="https://ncatlab.org/nlab/history/inhomogeneous cosmology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/inhomogeneous+cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/inhomogeneous+cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inhomogeneous+cosmology/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/inhomogeneous+cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inhomogeneous+cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/inhomogeneous cosmology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
