--- a/pages/19525.html
+++ b/pages/19525.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Thomas Buchert in nLab
+      Carlos Contou-Carrere in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Thomas Buchert
+      Carlos Contou-Carrere
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8735/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8736/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,43 +307,49 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li>
-<p><a href='http://www.cosmunix.de/'>webpage</a></p>
-</li>
-
-<li>
-<p><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=105890'>Mathematics Genealogy page</a></p>
-</li>
-</ul>
-
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5728e7e61f56cf99571aeb74528b156c7107a577_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+    <p>C. Contou Carrère was a student of <a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexander Grothendieck</a>. His thesis is</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></li>
+<li><em>Géométrie des groupes réductifs, lieu singulier et résolutions équivariantes de leurs variétés de Schubert</em></li>
 </ul>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+<p>Later he will develop the theory of relative Jacobians, this work is summarized in</p>
+
+<ul>
+<li><em><a href='https://link.springer.com/chapter/10.1007/978-0-8176-4575-5_2'>Jacobiennes généralisées globales relatives</a></em>, <em><a href='http://www.numdam.org/item/RSMUP_2013__130__1_0'>Jacobienne locale d’une courbe formelle relative</a></em></li>
+</ul>
+
+<p>a work for which Grothendieck had a deep admiration.</p>
+
+<ul>
+<li>
+<p><a href='https://www.coulomb.univ-montp2.fr/spip.php?page=pageperso&amp;nom=CONTOU%20CARRERE&amp;prenom=Carlos&amp;lang=fr'>Webpage</a></p>
+</li>
+
+<li>
+<p><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=31175'>Mathematics genealogy</a></p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 13, 2018 at 19:24:58.
-  See the <a href="https://ncatlab.org/nlab/history/Thomas Buchert" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 13, 2018 at 19:28:17.
+  See the <a href="https://ncatlab.org/nlab/history/Carlos Contou-Carrere" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Thomas+Buchert" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thomas+Buchert/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Thomas+Buchert" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thomas+Buchert" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Thomas Buchert/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Carlos+Contou-Carrere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Carlos Contou-Carrere/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Thomas+Buchert" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Carlos+Contou-Carrere" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Thomas+Buchert" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Carlos+Contou-Carrere" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Thomas+Buchert" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Carlos+Contou-Carrere" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
