--- a/pages/19526.html
+++ b/pages/19526.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Thomas Buchert in nLab
+      John Moffat in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Thomas Buchert
+      John Moffat
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8735/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8737/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,16 +308,10 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li>
-<p><a href='http://www.cosmunix.de/'>webpage</a></p>
-</li>
-
-<li>
-<p><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=105890'>Mathematics Genealogy page</a></p>
-</li>
+<li><a href='https://www.dur.ac.uk/research/directory/staff/?id=11814'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5728e7e61f56cf99571aeb74528b156c7107a577_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_4732db76a861e5975badd5c07876819f58be243f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></li>
@@ -328,22 +322,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 13, 2018 at 19:24:58.
-  See the <a href="https://ncatlab.org/nlab/history/Thomas Buchert" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 13, 2018 at 19:32:10.
+  See the <a href="https://ncatlab.org/nlab/history/John Moffat" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Thomas+Buchert" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thomas+Buchert/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Thomas+Buchert" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thomas+Buchert" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Thomas Buchert/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/John+Moffat" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/John Moffat/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Thomas+Buchert" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/John+Moffat" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Thomas+Buchert" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/John+Moffat" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Thomas+Buchert" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/John+Moffat" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
