--- a/pages/19523.html
+++ b/pages/19523.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1087,7 +1087,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#lemaitretolmanbondi'>Lemaitre-Tolman-Bondi</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>What is called <em>inhomogeneous cosmology</em> is the study of <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> via cosmological solutions to <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a>, <em>whithout</em> assuming or constraining these solutions to be spatially homogeneous (in the technical sense).</p>
@@ -1100,9 +1100,17 @@ margin-left: 0em;
 
 <p>Given that the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> faces some issues related to <em><a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>/<a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a></em> (and possibly related issues such as <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> or <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>), it has been suggested that these may be but an artifact of the overly idealistic approximation of cosmic homogeneity, and that a more accurate inhomogeneous cosmology would not need to assume any <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> (e.g. <a href='#Celerier00'>Célérier 99</a>, <a href='#AlnesAmarzguiouiGron06'>Alnes-Amarzguioui-Gron 06</a>, <a href='#AlnesAmarzguioui06'>Alnes-Amarzguioui 06</a>, <a href='#BuchertLarenaAlimi06'>Buchert-Larena-Alimi 06</a>, <a href='#EnqvistMattsson06'>Enqvist-Mattsson 06</a> <a href='#Buchert07'>Buchert 07</a>, <a href='#Sarkar08'>Sarkar 08</a>, <a href='#Buchert11'>Buchert 11</a>, <a href='#BucherRasanen11'>Buchert-Rasanen 11</a>, <a href='#Scharf13'>Scharf 13</a>, <a href='#Moffat16'>Moffat 16</a>).</p>
 
-<p>A seminal argument that it <em>is</em> consistent to neglect cosmic inhomogeneity due to <a href='#GreenWald10'>Green-Wald 10</a>, <a href='#GreenWald13'>Green-Wald 13</a>, has been called into question in <a href='#BuchertEtAl15'>Buchert et al. 15</a>, where it is concluded that the question is more subtle and remains open. Recent review is in <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16</a>.</p>
+<p>A seminal argument that it <em>is</em> consistent to neglect cosmic inhomogeneity due to <a href='#GreenWald10'>Green-Wald 10</a>, <a href='#GreenWald13'>Green-Wald 13</a>, has been called into question in <a href='#BuchertEtAl15'>Buchert et al. 15</a>, where it is concluded that the question is more subtle and remains open. But see <a href='#GreenWald15'>Green-Wald 15</a>.</p>
+
+<p>Inhomogeneity effects seen in numerical simulations are discussed in <a href='#ACDDK17'>ACDDK 17</a>.</p>
+
+<p>Review of attitudes in the community is in <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16</a>.</p>
 
 <p>If the apparent small positive <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> were but an artifact of neglecting backreaction of inhomegeneities, some theoretical puzzlements regarding <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> on <a class='existingWikiWord' href='/nlab/show/de+Sitter+spacetime'>de Sitter spacetimes</a> would disappear (see <a href='de+Sitter+spacetime#Rajaraman16'>Rajaraman 16</a> for general discussion and <a href='#DanielssonVanRiet18'>Danielsson-VanRiet 18, p. 27</a> for discussion of <a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacua</a>).</p>
+
+<h2 id='lemaitretolmanbondi'>Lemaitre-Tolman-Bondi</h2>
+
+<p>A particular class of examples of inhomogeneous cosmological models are Lemaitre-Tolman-Bondi models, which however require assuming that we inhabit a position close to a singled-out “center” of the universe. See e.g. <a href='#Enkvist07'>Enkvist 07</a>. These are mostly used as toy models for effects of inhomogeneity.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1135,6 +1143,10 @@ margin-left: 0em;
 
 <li id='Buchert07'>
 <p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, <em>Dark Energy from structure: a status report</em>, Gen.Rel.Grav.40:467-527, 2008 (<a href='http://xxx.lanl.gov/abs/0707.2153'>arXiv:0707.2153</a>)</p>
+</li>
+
+<li id='Enkvist07'>
+<p>Kari Enqvist, <em>Lemaitre-Tolman-Bondi model and accelerating expansion</em>, Gen. Rel. Grav.40:451-466, 2008 (<a href='https://arxiv.org/abs/0709.2044'>arXiv:0709.2044</a>)</p>
 </li>
 
 <li id='Sarkar08'>
@@ -1175,12 +1187,20 @@ margin-left: 0em;
 <p>exposition in <em><a href='https://cqgplus.com/2016/01/20/the-universe-is-inhomogeneous-does-it-matter/'>The Universe is inhomogeneous. Does it matter?</a></em> CQG+, 2016</p>
 </li>
 
+<li id='GreenWald15'>
+<p>Stephen R. Green, <a class='existingWikiWord' href='/nlab/show/Robert+Wald'>Robert Wald</a>, <em>Comments on Backreaction</em> (<a href='https://arxiv.org/abs/1506.06452'>arXiv:1506.06452</a>)</p>
+</li>
+
 <li id='Moffat16'>
 <p><a class='existingWikiWord' href='/nlab/show/John+Moffat'>John Moffat</a>, <em>Inhomogeneous Cosmology Redux</em> (<a href='https://arxiv.org/abs/1608.00534'>arXiv:1608.00534</a>)</p>
 </li>
 
 <li id='BelejkoKorzynski16'>
 <p>Krzysztof Bolejko, Mikołaj Korzyński, <em>Inhomogeneous cosmology and backreaction: Current status and future prospects</em>, Int. J. Mod. Phys. D 26, 1730011 (2017) (<a href='https://arxiv.org/abs/1612.08222'>arXiv:1612.08222</a>)</p>
+</li>
+
+<li id='ACDDK17'>
+<p>Julian Adamek, Chris Clarkson, David Daverio, Ruth Durrer, Martin Kunz, <em>Safely smoothing spacetime: backreaction in relativistic cosmological simulations</em> (<a href='https://arxiv.org/abs/1706.09309'>arXiv:1706.09309</a>)</p>
 </li>
 
 <li id='DanielssonVanRiet18'>
@@ -1191,13 +1211,26 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Inhomogeneous_cosmology'>Inhomogeneous cosmology</a></em></li>
+<li>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Inhomogeneous_cosmology'>Inhomogeneous cosmology</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Lema%C3%AEtre%E2%80%93Tolman_metric'>Lemaître–Tolman metric</a></em></p>
+</li>
 </ul>
+
+<p>
+ 
+ 
+ 
+ 
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 13, 2018 at 19:56:27.
+  Last revised on July 13, 2018 at 20:25:13.
   See the <a href="https://ncatlab.org/nlab/history/inhomogeneous cosmology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
