--- a/pages/19525.html
+++ b/pages/19525.html
@@ -313,7 +313,7 @@ margin-left: 0em;
 <li><em>Géométrie des groupes réductifs, lieu singulier et résolutions équivariantes de leurs variétés de Schubert</em></li>
 </ul>
 
-<p>Later he will develop the theory of relative Jacobians, this work is summarized in</p>
+<p>Later he will develop the theory of <a class='existingWikiWord' href='/nlab/show/Jacobian+variety'>relative Jacobians</a>, this work is summarized in</p>
 
 <ul>
 <li><em><a href='https://link.springer.com/chapter/10.1007/978-0-8176-4575-5_2'>Jacobiennes généralisées globales relatives</a></em>, <em><a href='http://www.numdam.org/item/RSMUP_2013__130__1_0'>Jacobienne locale d’une courbe formelle relative</a></em></li>
@@ -334,14 +334,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on July 13, 2018 at 19:28:17.
+  Last revised on July 14, 2018 at 02:23:05.
   See the <a href="https://ncatlab.org/nlab/history/Carlos Contou-Carrere" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Carlos+Contou-Carrere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Carlos+Contou-Carrere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Carlos+Contou-Carrere/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Carlos+Contou-Carrere" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Carlos+Contou-Carrere" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Carlos Contou-Carrere/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
