--- a/pages/15681.html
+++ b/pages/15681.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Birch and Swinnerton-Dyer conjecture</em> is a <a class='existingWikiWord' href='/nlab/show/conjecture'>conjecture</a> about the form of the first non-vanishing <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a> of the <a class='existingWikiWord' href='/nlab/show/Hasse-Weil+L-function'>Hasse-Weil L-function</a> of an <a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a> at <math class='maruku-mathml' display='inline' id='mathml_dbe225d9dd2dd3832df36d3650384e9182b33ab1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>s= 1</annotation></semantics></math>, expressed in terms of a <a class='existingWikiWord' href='/nlab/show/higher+regulator'>higher regulator</a>, analogous to the <a class='existingWikiWord' href='/nlab/show/class+number+formula'>class number formula</a> for a <a class='existingWikiWord' href='/nlab/show/Dedekind+zeta+function'>Dedekind zeta function</a>.</p>
+<p>The <em>Birch and Swinnerton-Dyer conjecture</em> is a <a class='existingWikiWord' href='/nlab/show/conjecture'>conjecture</a> about the form of the first non-vanishing <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a> of the <a class='existingWikiWord' href='/nlab/show/Hasse-Weil+L-function'>Hasse-Weil L-function</a> of an <a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a> at <math class='maruku-mathml' display='inline' id='mathml_0ca83e46ddfb8ca9e5c537f8dc2e4e3a5b53d01f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>s= 1</annotation></semantics></math>, expressed in terms of a <a class='existingWikiWord' href='/nlab/show/higher+regulator'>higher regulator</a>, analogous to the <a class='existingWikiWord' href='/nlab/show/class+number+formula'>class number formula</a> for a <a class='existingWikiWord' href='/nlab/show/Dedekind+zeta+function'>Dedekind zeta function</a>.</p>
 
 <p>This is hence a conjecture about <a class='existingWikiWord' href='/nlab/show/special+values+of+L-functions'>special values of L-functions</a>. It influenced the more far-reaching <a class='existingWikiWord' href='/nlab/show/Beilinson+conjecture'>Beilinson conjectures</a>.</p>
 
@@ -342,27 +341,30 @@ margin-left: 0em;
 <li id='Bloch80'>
 <p><a class='existingWikiWord' href='/nlab/show/Spencer+Bloch'>Spencer Bloch</a>, <em>A note on height pairings, Tamagwawa numbers, and the Birch and Swinnerton-Dyer conjecture</em>, Inventiones math. 58, 65-76 (1980) (<a class='existingWikiWord' href='/nlab/files/BlochTamagawa.pdf' title='pdf'>pdf</a>)</p>
 </li>
-</ul>
 
-<p>
+<li>
+<p>Conrad, Venkatesh, et al., <em>BSD Seminar</em> <em><a href='http://math.stanford.edu/~conrad/BSDseminar/Notes/L1.pdf'>Introduction to the BSD conjecture</a></em>, <em><a href='http://math.stanford.edu/~conrad/BSDseminar/Notes/'>All lecture notes</a></em> 
  
 </p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on August 26, 2014 21:05:08 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.136.246.44)
+  <p>
+  Last revised on July 15, 2018 at 10:43:48.
+  See the <a href="https://ncatlab.org/nlab/history/Birch and Swinnerton-Dyer conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Birch+and+Swinnerton-Dyer+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Birch+and+Swinnerton-Dyer+conjecture/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Birch+and+Swinnerton-Dyer+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Birch+and+Swinnerton-Dyer+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Birch+and+Swinnerton-Dyer+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Birch+and+Swinnerton-Dyer+conjecture/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Birch+and+Swinnerton-Dyer+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Birch+and+Swinnerton-Dyer+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Birch and Swinnerton-Dyer conjecture/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Birch+and+Swinnerton-Dyer+conjecture" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Birch+and+Swinnerton-Dyer+conjecture" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Birch+and+Swinnerton-Dyer+conjecture" id="view_source" rel="nofollow">Source</a>
